2004-02-24  Andy Wingo  <wingo@pobox.com>

	* gst/gstelement.c (gst_element_dispose): Protect against multiple
	invocations.

	* gst/schedulers/gstoptimalscheduler.c
	I added a mess of prototypes at the top of the file by way of
	documentation. Some of the operations on chains and groups were
	re-organized.

	(create_group): Added a type argument so if the group is enabled,
	the setup_group_scheduler knows what to do.
	(group_elements): Added a type argument here, too, to be passed on
	to create_group.
	(group_element_set_enabled): If an unlinked PLAYING element is
	added to a bin, we have to create a new group to hold the element,
	and this function will be called before the group is added to the
	chain. Thus we have a valid case for group->chain==NULL. Instead
	of calling chain_group_set_enabled, just set the flag on the group
	(the chain's status will be set when the group is added to it).
	(gst_opt_scheduler_state_transition, chain_group_set_enabled):
	Setup the group scheduler when the group is enabled, not
	specifically when an element goes PAUSED->PLAYING. This means
	PLAYING elements can be added, linked, and scheduled into a
	PLAYING pipeline, as was intended.
	(add_to_group): Don't ref the group twice. I don't know when this
	double-ref got in here. Removing it has the potential to cause
	segfaults if other parts of the scheduler are buggy. If you find
	that the scheduler is segfaulting for you, put in an extra ref
	here and see if that hacks over the underlying issue. Of course,
	then find out what code is unreffing a group it doesn't own...
	(create_group): Make the extra refcount floating, and remove it
	after adding the element. This means that...
	(unref_group): Destroy when the refcount reaches 0, not 1, like
	every other refcounted object in the known universe.
	(remove_from_group): When a group becomes empty, set it to be not
	active, and remove it from its chain. Don't unref it again,
	there's no floating reference any more.